fixed style issues on mobile

--- a/src/styles/faq_block.css
+++ b/src/styles/faq_block.css
@@ -3,4 +3,16 @@
     padding: 3rem;
     height: auto;
     object-fit: cover;
+    pointer-events: none;
 }
+
+.block_faq {
+    height: 40rem;
+  }
+  
+  @media (min-width: 50em) {
+    .block_faq {
+      background-position: center;
+      height: 45rem;
+    }
+  }
