--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,7 +45,7 @@ main {
 }
 
 iframe {
-  width: 70%;
+  width: 100%;
   height: auto;
   margin: 0 auto;
   aspect-ratio: 16 / 9;
@@ -65,7 +65,7 @@ iframe {
   justify-content: left;
   width: 100%;
   height: auto;
-  padding: 5rem;
+  padding: 1rem;
   text-align: left;
   background: #101010;
   box-shadow: 0px 0px 18rem 13rem #101010;
@@ -175,8 +175,8 @@ summary {
 .hero_title {
   position: relative;
   z-index: 4;
-  padding: 2rem;
-  font-size: 4rem;
+  padding: 1rem;
+  font-size: 3rem;
   text-align: center;
   line-height: 1.1;
   color: #fffeeb;
@@ -313,7 +313,7 @@ button:focus-visible,
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 0rem;
+  margin-top: 3rem;
   width: 100%;
 }
 
@@ -329,24 +329,24 @@ button:focus-visible,
   background-color: #000000;
 }
 
-/* mobile */
+/* desktop */
 
-@media (max-width: 50rem) {
+@media (min-width: 50rem) {
   iframe {
-    width: 100%;
+    width: 70%;
   }
 
   .section {
-    padding: 1rem;
+    padding: 5rem;
   }
 
   .hero_title {
-    padding: 1rem;
-    font-size: 3rem;
+    padding: 2rem;
+    font-size: 4rem;
   }
 
   #hero_button_div {
-    margin-top: 3rem;
+    margin-top: 0rem;
   }
 }
 
